...

    Column(
        modifier = modifier.padding(padding),
        verticalArrangement = Arrangement.Center,
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        EmailField(emailState = emailState, imeAction = ImeAction.Done, modifier = Modifier.testTag("EmailField"))
        SmallSpacer()
        Button(
            onClick = {
                sendPasswordResetEmail(emailState.text)
            },
            enabled = emailState.isValid,
            modifier = Modifier.fillMaxWidth().testTag("ResetPasswordButton")
        ) {
            Text(
                text = RESET_PASSWORD_BUTTON,
                fontSize = 15.sp
            )
        }
...
